# wagtail-bulk-translation-import

./: .gitignore  README.md  pyproject.toml
example/: db.sqlite3  requirements.txt
example/example/: settings.py  urls.py  wsgi.py
example/example/settings/: base.py  dev.py
example/home/migrations/: 0003_homepage_body.py
example/home/templates/home/: home_page.html
example/static/: staticfiles.json
example/translation_bulk_import/: apps.py  models.py  wagtail_hooks.py
example/translation_bulk_import/templates/translation_bulk_import/admin/: bulk_upload.html
example/translation_bulk_import/views/: edit_translation.py
