[tool.poetry]
name = "wagtailbulklocalize"
version = "0.1.0"
description = ""
authors = ["Paweł Gruszka <pgruszka@opera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "==4.2.11"
wagtail = "==6.1.2"
wagtail-localize = "==1.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

